# autoloop

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  autoloop.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: autoloop-cleanup.yml
src/autoloop/: __init__.py  auto_close_parent.py  claude_runner.py  cli.py  config.py  create_issue.py  fix_pr.py  implement_issue.py  init.py  mcp_server.py  preflight.py  triage_issues.py  update_changelog.py
templates/: autoloop-cleanup.yml
tests/: conftest.py  test_auto_close_parent.py  test_claude_runner.py  test_config.py  test_create_issue.py  test_fix_pr.py  test_implement_issue.py  test_init.py  test_mcp_repo_dir.py  test_preflight.py  test_readme.py  test_status.py  test_triage_issues.py  test_update_changelog.py  test_version.py
