[project]
name = "autoloop"
version = "0.2.3"
description = "Config-driven AI pipeline for triaging and implementing GitHub issues"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "Andy Widjaja" }]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp"]

[project.scripts]
autoloop = "autoloop.cli:main"
autoloop-mcp = "autoloop.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoloop"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = ["pytest", "ruff"]
